# mako

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml  jobs.json.example  mcp_servers.example.json  pyproject.toml
deploy/: logrotate-mako
docs/: architecture.mmd  improvement-plan.md
src/mako/: __init__.py  __main__.py  agent.py  config.py  context.py  main.py  scheduler.py  security.py
src/mako/channels/: cli.py  common.py  discord.py  telegram.py
src/mako/memory/: compactor.py  store.py  workspace.py
src/mako/providers/: __init__.py  base.py  claude.py  gemini.py
src/mako/tools/: mcp.py  registry.py  retry.py  shell.py  web_fetch.py  workspace.py
workspace/: IDENTITY.md  MEMORY.md  SOUL.md
